--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -1,7 +1,7 @@
 
 <div>
 <table>
-<% recipes.each do |recipe| %>
+<% @recipes.each do |recipe| %>
   <tr colspan=2><th><%= recipe.name %></th></tr>
   <% recipe.ingredients.each do |ingredient| %>
     <tr><td><%= ingredient.quantity %></td><td><%= ingredient.name %></td>
