It works! Finally. Freaking finally.
Things that go:

* Routes -- there's only one to route root, but it works
* db:migration -- Migrations setup correctly, schemae are properly defined.
* db:seed -- test data correct, inserts properly.
* Models -- recipe, ingredient, direction all defined
** Validation works
** Method accesses correct for bulk creation.
* RecipesController -- find, all, create, new, save, all working.
* Views and Layouts -- bare-bones, but things display at all, which is more than I could say before.

Next Up:
* A brief detour into JSON
* Clarify routes
* Start getting brain around Google search

--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -1,14 +1,14 @@
-
 <div>
-<table>
+<table> 
 <% @recipes.each do |recipe| %>
-  <tr colspan=2><th><%= recipe.name %></th></tr>
+  <tr colspan=2><th><%= recipe.recipe_name %></th></tr>
   <% recipe.ingredients.each do |ingredient| %>
-    <tr><td><%= ingredient.quantity %></td><td><%= ingredient.name %></td>
+    <tr><td><%= ingredient.quantity %></td><td><%= ingredient.ingredient_name %></td>
   <% end %>
   <% recipe.directions.order("ordinality ASC").each do |direction| %>
-    <tr><td colspan=2><%= direction.ordinality %><%= direction.text %></td></tr>
+    <tr><td colspan=2><%= direction.ordinality %>:  <%= direction.body %></td></tr>
   <% end %>
+<br>
 <% end %>
 </table>
 </div>
